Formatting changes and non-final figure update

--- a/Apendice/GaiaADQL.tex
+++ b/Apendice/GaiaADQL.tex
@@ -1,8 +1,8 @@
 \chapter{Gaia ADQL Query} \label{apendice:gaiaAdql}
 
 % TODO: formatting new page
-\newpage
-\clearpage
+% \newpage
+% \clearpage
 
 \begin{lstlisting}[ language=SQL,
 	deletekeywords={IDENTITY},
