--- a/Metodologia/Secciones/ModeloComputacional/ModeloComputacional.tex
+++ b/Metodologia/Secciones/ModeloComputacional/ModeloComputacional.tex
@@ -881,7 +881,7 @@ lo tanto un enorme tiempo de cómputo que efectivamente se tiene que utilizar
 como periodo de quemado.
 
 % TODO: actualiza con las últimas iteraciones
-\section{Resultados}
+\section{Resultados} \label{metodologia:modelocomputacional:resultados}
 
 Es prácticamente imposible determinar con certeza si una cadena de Markov ha
 convergido con éxito a un volumen del espacio de parámetros para un modelo de un
@@ -904,9 +904,9 @@ también es un síntoma de un modelo de alta dimensionalidad. El código
 responsable por correr el muestreo se tuvo que reiniciar varias veces en el
 transcurso del proyecto, lo cual al experimentar con el código tuvo un impacto
 subjetivo en la fracción de pasos aceptados reportado por PHOEBE; antes del
-primer reinicio el muestreo tenía una fracción de pasos aceptados promedio de
-$0.196$, con el 43.12\% de los caminadores ostentando una fracción de pasos
-aceptados entre 0.2 y 0.5. 
+primer reinicio el muestreo (4260 iteraciones, 1159 iteraciones de quemado.)
+tenía una fracción de pasos aceptados promedio de $0.196$, con el 43.12\% de los
+caminadores ostentando una fracción de pasos aceptados entre 0.2 y 0.5. 
 
 % TODO: actualiza con últimos resultados
 \subsection{Funciones de Densidad de Probabilidad a Posteriori} \label{metodologia:modelocomputacional:mcmc:resultados}
