Added beginning abstract and conclusions

--- a/Conclusion/Conclusion.tex
+++ b/Conclusion/Conclusion.tex
@@ -1,3 +1,37 @@
 \part{Discusión y Conclusiones}
 
 \input{Conclusion/ModeloPhoebe.tex}
+
+\chapter{Conclusiones}
+
+Se ha presentado la búsqueda de sistemas binarios eclipsantes dentro del
+catálogo de Gaia DR3 con el objetivo de realizar una campaña de observación
+fotométrica desde el Observatorio Astronómico Universitario en Iturbide, N.L.
+\atoObjId fue elegido como el objetivo de interés debido a su clasificación como
+\textit{candidata a binaria eclipsante} durante el tiempo en el que se realizó
+la búsqueda de objetos. Este objeto de magnitud 16.91 en la banda $G$ de Gaia
+fue observado en el rango óptico por 9 noches utilizando el telescopio CDK20 de
+0.5m de diámetro. Esta campaña de observación resultó en una curva de luz
+fotométrica de \atoObjIdNoSpace, también sirviendo como una prueba de la
+factibilidad de campañas de observación de sistemas binarios tenues desde el
+OAU-Iturbide.
+
+Para complementar los datos disponibles de \atoObjId se obtuvieron curvas
+fotométricas adicionales obtenidas de los catálogos de ZTF DR20 y Gaia DR3 con
+el objetivo de realizar un estudio fotométrico particular del objeto de interés.
+Primero se encontró el periodo orbital del sistema de $8.00558 \pm 0.00013 \
+\mathrm{h}$. Partiendo del corto periodo orbital del sistema junto a la
+morfología aparente de las curvas de luz en fase se ajustó un modelo de un
+sistema binario eclipsante en contacto utilizando PHOEBE, del cual al final se
+obtuvieron una parte de los parámetros fundamentales estelares y orbitales del
+sistema, descritos en la
+\refthesissection{metodologia:modelocomputacional:resultados}. Algunas
+consideraciones de estos resultados\textemdash incluyendo un análisis
+rudimentario de datos espectroscópicos adicionales y una posible solución
+fotométrica alterna dada en la
+\refthesissection{conclusion:consideraciones_phoebe:multimodalidad_pdf}\textemdash
+se presentó para resaltar las limitaciones de la solución fotométrica presentada
+en este trabajo\textemdash cosa que puede ser posible eliminar con la inclusión
+de datos espectroscópicos adicionales (ie. curvas de velocidades radiales o
+distribuciones de energía espectral de las componentes)\textemdash y las
+correlaciones presentes entre los distintos parámetros del modelo.
