Added github links to conclusion

--- a/Conclusion/Conclusion.tex
+++ b/Conclusion/Conclusion.tex
@@ -35,3 +35,9 @@ en este trabajo\textemdash cosa que puede ser posible eliminar con la inclusión
 de datos espectroscópicos adicionales (ie. curvas de velocidades radiales o
 distribuciones de energía espectral de las componentes)\textemdash y las
 correlaciones presentes entre los distintos parámetros del modelo.
+
+El código que se utilizó para realizar esta investigación se encuentra en el
+repositorio abierto en GitHub:
+\url{https://github.com/KnightIV/UANL_MAPTA_Observaciones}. El código LaTeX para
+el escrito de esta tesis se encuentra en el repositorio abierto en GitHub:
+\url{https://github.com/KnightIV/UANL_MAPTA_Master_Thesis}.
